--- a/Transfer.Web/Views/TripRequest/Show.cshtml
+++ b/Transfer.Web/Views/TripRequest/Show.cshtml
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="~/css/TripRequest/Search.css" />
 }
 
-    @{
+@{
     var TripOptions = new List<TripOption>();
-
+    var canChoose = Model.State == Transfer.Common.Enums.States.TripRequestStateEnum.Active.GetEnumGuid() && Model.Offers.Any() && Model.Offers.All(x => !x.Chosen);
 }
 
 <div class="container">
@@ -130,7 +130,7 @@
                         <div class="row">
                             <div class="t-col col-12"><i class="far fa-user-circle"></i> @o.ContactFio, <a href="tel:@o.ContactPhone">@o.ContactPhone</a>, <a href="mailto:@o.ContactEmail">@o.ContactEmail</a></div>
                         </div>
-                        @if (Model.State == Transfer.Common.Enums.States.TripRequestStateEnum.Active.GetEnumGuid())
+                        @if (canChoose)
                         {
                             <div class="col-12 col-md-3 t-col text-center go">
                                 <a href="#" data-bs-href="@Url.Action("TripRequestSetCarrierChoosen", "TripRequest", new { requestId = Model.Id, offerId = o.Id })" data-bs-confirm-text="Вы уверены что хотите выбрать это предложение?" data-bs-toggle="modal" data-bs-target="#confirm-action">
