--- a/Transfer.Web/Views/Info/Home.cshtml
+++ b/Transfer.Web/Views/Info/Home.cshtml
@@ -1,1 +1,34 @@
-﻿<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+﻿
+@using Transfer.Common.Extensions
+
+@section Styles {
+    <link rel="stylesheet" href="~/source/fileinput.min.css" />
+    <link rel="stylesheet" href="~/source/select2.min.css" />
+    <link rel="stylesheet" href="~/source/select2-bootstrap-5-theme.min.css" />
+
+}
+
+
+<div class="container">
+    <div class="row">
+        <div class="t-col col-12 crumbs">
+            ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;Документы
+        </div>
+    </div>
+    <div class="row">
+        <div class="t-col col-12">
+            <h1 style="color: #0f4c71">Документы</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="t-col col-12">
+                <a href="/static/4ks6wz" target="_blank">Соглашение об использовании Платформы</a><br/>
+                <a href="/static/ibh87t" target="_blank">Оферта о заключении договора фрахтования транспортных средств для перевозки пассажиров и багажа с использованием Платформы</a><br />
+                <a href="/static/5r125k" target="_blank">Партнерское соглашение на осуществление перевозок</a><br />
+                <a href="/static/v8ls7e" target="_blank">Политика конфиденциальности</a><br />
+                <a href="/static/6thrai" target="_blank">Лицензионное соглашение</a><br />
+                <a href="/static/sd9dzh" target="_blank">Договор ВОУ (агентское вознаграждение)</a><br />
+                <a href="/static/62s5ut" target="_blank">Договор ВОУ (абонентская плата)</a>
+        </div>
+    </div>
+</div>
