--- a/Transfer.Web/Views/Shared/_Layout.cshtml
+++ b/Transfer.Web/Views/Shared/_Layout.cshtml
@@ -3,8 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="/images/favicon.png" type="image/png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Transfer.Webz</title>
+    <title>Транспортная компания Трансфер</title>
     <link rel="stylesheet" href="~/source/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="~/source/fontawesome.all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="~/css/main.css" />
@@ -16,25 +17,26 @@
             <div class="row blank-row"></div>
             <div class="row blank-row"></div>
             <div class="row main-header">
-                <div class="col-lg-3 col-md-12">
+                <div class="col-lg-2 col-md-4 col-6 pb-2">
                     <a href="/">
-                        <img src="/images/trsite_logo.png" class="main-logo" />
+                        <img src="/images/trsite_logo_new.png" class="main-logo" />
                     </a>
                 </div>
-                <div class="col-lg-2 col-md-12 social">
-                    <a href="/">
+                <div class="col-lg-2 offset-lg-1 offset-md-6 col-md-2 offset-3 col-3 pb-2 social">
+                    <a href="https://m.vk.com/tktransfer">
                         <i class="fab fa-vk fa-lg"></i>
                     </a>
-                    <a href="/">
+                    <a href="https://t.me/TK_transfer">
                         <i class="fab fa-telegram fa-lg"></i>
                     </a>
                 </div>
+                
                 @if (Transfer.Web.Moduls.Security.IsAuthenticated)
                 {
-                    <div class="col-lg-3 col-md-12 text-center t-col avatar">
+                    <div class="offset-lg-2 col-lg-3 col-md-12 text-center avatar">
                         <i class="far fa-user-circle" style="color: #0f4c71; font-size: 1.2em;"></i>&nbsp;&nbsp;&nbsp;<a asp-controller="Account" asp-action="Index">@Security.CurrentAccount.FirstName @Security.CurrentAccount.LastName</a>
                     </div>
-                    <div class="col-lg-2 offset-lg-2 text-center">
+                    <div class="col-lg-2 col-md-12 pb-2 text-center">
                         <a class="top-button-a" asp-controller="Auth" asp-action="LogOut">
                             <div class="top-button">Выход</div>
                         </a>
@@ -50,19 +52,19 @@
                             </div>
                         </a>
                     </div>-->
-                    <div class="col-lg-2 col-md-6 text-center">
+                    <div class="offset-lg-3 col-lg-2 col-sm-6 pb-2 text-center">
                         <a class="top-button-reg-a" asp-controller="Home" asp-action="Registration">
                             <div class="top-button">Регистрация</div>
                         </a>
                     </div>
-                    <div class="col-lg-2 col-md-6 text-center">
+                    <div class="col-lg-2 col-sm-6 pb-2 text-center">
                         <a href="#" class="top-button-a" data-bs-toggle="modal" data-bs-target="#exampleModal">
                             <div class="top-button">Вход</div>
                         </a>
                     </div>
                 }
             </div>
-            <div class="row blank-row"></div>
+            <!--<div class="row blank-row"></div>-->
             <div class="row">
                 @if (Security.IsAuthenticated)
                 {
@@ -87,7 +89,7 @@
                         <a class="col-md-2 text-center" asp-controller="Info" asp-action="About">О компании</a>
                         <a class="col-md-2 text-center" asp-controller="Transport" asp-action="Index">Транспорт</a>
                         <a class="col-md-2 text-center" asp-controller="Trip" asp-action="Index">Поездки</a>
-                        <a class="col-md-2 text-center" asp-controller="Info" asp-action="Normatives">Нормативные акты</a>
+                        <a class="col-md-2 text-center" asp-controller="Info" asp-action="Home">Документы</a>
                         <a class="col-md-2 text-center" asp-controller="Info" asp-action="Specials">Спецпредложения</a>
                         <a class="col-md-2 text-center" asp-controller="Info" asp-action="Contacts">Контакты</a>
                     </div>
@@ -108,28 +110,28 @@
                 <div class="col-12 col-md-3">
                     <div class="row d-flex d-md-none flex-wrap align-items-center">
                         <a href="/" style="display: flex; align-items: center; justify-content: center;">
-                            <img alt="" src="/images/trsite_logo.png" class="main-logo" />
+                            <img alt="" src="/images/trsite_logo_new.png" class="main-logo" />
                         </a>
                     </div>
                     <div class="row d-none d-md-flex flex-wrap align-items-center">
                         <a href="/">
-                            <img alt="" src="/images/trsite_logo.png" class="main-logo" />
+                            <img alt="" src="/images/trsite_logo_new.png" class="main-logo" />
                         </a>
                     </div>
                     <div class="row blank-row"></div>
                     <div class="d-block d-md-none col-12 t-col social" style="text-align: center;">
-                        <a href="/">
+                        <a href="https://m.vk.com/tktransfer">
                             <i class="fab fa-vk fa-lg"></i>
                         </a>
-                        <a href="/">
+                        <a href="https://t.me/TK_transfer">
                             <i class="fab fa-telegram fa-lg"></i>
                         </a>
                     </div>
                     <div class="d-none d-md-block col-12 t-col social">
-                        <a href="/">
+                        <a href="https://m.vk.com/tktransfer">
                             <i class="fab fa-vk fa-lg"></i>
                         </a>
-                        <a href="/">
+                        <a href="https://t.me/TK_transfer">
                             <i class="fab fa-telegram fa-lg"></i>
                         </a>
                     </div>
